objects/Councillor_Details__c.object
<CustomObject>
    <fields>
        <fullName>Councillor_Email__c</fullName>
        <description>An email address for the Councillor.</description>
        <inlineHelpText>Please supply an email address for the Councillor.</inlineHelpText>
        <label>Councillor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Councillor_Image_URL__c</fullName>
        <description>A URL for an image of the Councillor.</description>
        <inlineHelpText>Please supply a URL for an image of the Councillor.</inlineHelpText>
        <label>Councillor Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Councillor_Info_URL__c</fullName>
        <description>A URL linking to more information about the Councillor (could be a web page or a PDF).</description>
        <inlineHelpText>Please supply a URL linking to more information about the Councillor (could be a web page or a PDF).</inlineHelpText>
        <label>Councillor Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Councillor_Phone__c</fullName>
        <description>A telephone number for the Councillor.</description>
        <inlineHelpText>Please supply a telephone number for the Councillor.</inlineHelpText>
        <label>Councillor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Councillor_Type__c</fullName>
        <description>The type of Councillor ('Ward', 'District', 'County', 'MP' or 'MEP').</description>
        <inlineHelpText>Please supply the type of Councillor ('Ward', 'District', 'County', 'MP' or 'MEP').</inlineHelpText>
        <label>Councillor Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Political_Party__c</fullName>
        <description>The political party that the Councillor belongs to.</description>
        <inlineHelpText>Please supply the political party that the Councillor belongs to.</inlineHelpText>
        <label>Political Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ward_Code__c</fullName>
        <description>BS7666 Ward Code field. The ONS code of the electoral ward (ENG) or electoral division (CYM) name in which the BLPU is situated.</description>
        <inlineHelpText>The ONS code of the electoral ward (ENG) or electoral division (CYM) name in which the BLPU is situated.</inlineHelpText>
        <label>Ward Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>A custom setting to hold information about Councillors.</description>
    <label>Councillor Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Councillor_Type__c</columns>
        <columns>Ward_Code__c</columns>
        <columns>Political_Party__c</columns>
        <columns>Councillor_Email__c</columns>
        <columns>Councillor_Phone__c</columns>
        <columns>Councillor_Image_URL__c</columns>
        <columns>Councillor_Info_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>